tests/types-first-object-spread/types-first-object-spread.exp
Error ---------------------------------------------------------------------------------------------------- driver.js:9:2

Cannot cast `b1` to `B1` because:
 - Either property `y` is missing in `B` [1] but exists in object literal [2].
 - Or property `x` is missing in `B` [1] but exists in object literal [2].

   driver.js:9:2
    9| (b1: B1);
        ^^

References:
   test1.js:11:17
   11| export type B = {| z: number, ...A |}
                       ^^^^^^^^^^^^^^^^^^^^^ [1]
   test1.js:12:18
   12| module.exports = b;
                        ^ [2]


Error --------------------------------------------------------------------------------------------------- driver.js:10:2

Cannot cast `b1.x` to string because number [1] is incompatible with string [2].

   driver.js:10:2
   10| (b1.x: string);
        ^^^^

References:
   test1.js:3:16
    3| type A = {| x: number |} | {| y: number |}
                      ^^^^^^ [1]
   driver.js:10:8
   10| (b1.x: string);
              ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- driver.js:11:2

Cannot cast `b1.y` to string because number [1] is incompatible with string [2].

   driver.js:11:2
   11| (b1.y: string);
        ^^^^

References:
   test1.js:3:34
    3| type A = {| x: number |} | {| y: number |}
                                        ^^^^^^ [1]
   driver.js:11:8
   11| (b1.y: string);
              ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- driver.js:12:2

Cannot cast `b1.z` to string because number [1] is incompatible with string [2].

   driver.js:12:2
   12| (b1.z: string);
        ^^^^

References:
   test1.js:6:16
    6| const b = { z: 0, ...a };
                      ^ [1]
   driver.js:12:8
   12| (b1.z: string);
              ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- driver.js:15:2

Cannot cast `b2.x` to string because number [1] is incompatible with string [2].

   driver.js:15:2
   15| (b2.x: string);
        ^^^^

References:
   test2.js:8:16
    8| type A = {| x: number |}
                      ^^^^^^ [1]
   driver.js:15:8
   15| (b2.x: string);
              ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- driver.js:16:2

Cannot cast `b2.z` to string because number [1] is incompatible with string [2].

   driver.js:16:2
   16| (b2.z: string);
        ^^^^

References:
   test2.js:9:23
    9| export type B = {| z: number, ...A |}
                             ^^^^^^ [1]
   driver.js:16:8
   16| (b2.z: string);
              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test1.js:7:2

Cannot cast `b.x` to string because:
 - number [1] is incompatible with string [2].
 - undefined [1] is incompatible with string [2].

   test1.js:7:2
   7| (b.x: string); // Error, might not be on b or will be number
       ^^^

References:
   test1.js:3:16
   3| type A = {| x: number |} | {| y: number |}
                     ^^^^^^ [1]
   test1.js:7:7
   7| (b.x: string); // Error, might not be on b or will be number
            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test1.js:7:2

Cannot get `b.x` because property `x` is missing in object literal [1].

   test1.js:7:2
   7| (b.x: string); // Error, might not be on b or will be number
       ^^^

References:
   test1.js:6:11
   6| const b = { z: 0, ...a };
                ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test1.js:8:2

Cannot cast `b.y` to string because:
 - number [1] is incompatible with string [2].
 - undefined [1] is incompatible with string [2].

   test1.js:8:2
   8| (b.y: string); // Error, might not be on b or will be number
       ^^^

References:
   test1.js:3:34
   3| type A = {| x: number |} | {| y: number |}
                                       ^^^^^^ [1]
   test1.js:8:7
   8| (b.y: string); // Error, might not be on b or will be number
            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test1.js:9:2

Cannot cast `b.z` to string because number [1] is incompatible with string [2].

   test1.js:9:2
   9| (b.z: string);
       ^^^

References:
   test1.js:6:16
   6| const b = { z: 0, ...a };
                     ^ [1]
   test1.js:9:7
   9| (b.z: string);
            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test2.js:5:2

Cannot cast `b.x` to string because number [1] is incompatible with string [2].

   test2.js:5:2
   5| (b.x: string);
       ^^^

References:
   test2.js:3:16
   3| const a = { x: 0 };
                     ^ [1]
   test2.js:5:7
   5| (b.x: string);
            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test2.js:6:2

Cannot cast `b.z` to string because number [1] is incompatible with string [2].

   test2.js:6:2
   6| (b.z: string);
       ^^^

References:
   test2.js:4:16
   4| const b = { z: 0, ...a };
                     ^ [1]
   test2.js:6:7
   6| (b.z: string);
            ^^^^^^ [2]



Found 14 errors
